# adepthood

./: .editorconfig  .gitattributes  .gitignore  .graphifyignore  .pre-commit-config.yaml  .secrets.baseline  .venv  AGENTS.md  CLAUDE.md  DEPLOYMENT.md  DESIGN.md  Makefile  NORTH-STAR.md  README.md  RECOVERY-RUNBOOK.md  dev-setup.sh  eslint.config.mjs  mypy.ini  package-lock.json  package.json
backend/: .bandit  .coveragerc  .dockerignore  .env.example  Dockerfile  Dockerfile.dockerignore  alembic.ini  conftest.py  pyproject.toml  pytest.ini  railway.toml  requirements-dev.txt  requirements-lock.txt  requirements.txt
backend/app/: __init__.py  main.py  practice.py
backend/app/domain/: energy.py  goals.py  milestones.py  streaks.py
backend/app/models/: __init__.py  data_model.py  goal_completion.py  journal_entry.py  practice_session.py  prompt_response.py  stage_content.py  user.py  user_practice.py
backend/app/routers/: energy.py  practice.py
backend/app/schemas/: __init__.py  energy.py  goal.py
backend/content/: CONTENT_VERSION  manifest.example.json  manifest.schema.json
backend/migrations/: README  env.py  script.py.mako
backend/migrations/versions/: 07b8c9d0e1f2_add_practice_recipes_and_tags.py  145d340640ce_initial_schema.py  18c9d0e1f2a3_add_program_started_at.py  78b1620cafde_convert_datetime_columns_to_timestamptz.py  83b01b64cad3_user_practice_overrides.py  a0b1c2d3e4f5_journal_soft_delete.py  a1b2c3d4e5f6_goal_completion_unique_per_day_and_index.py  a1b2c3d4e5f6_goal_group_id_ondelete_set_null.py  a1b2c3d4e5f7_add_tallied_grounding_mode.py  a2b3c4d5e6f8_add_card_meditation_mode.py  a3b4c5d6e7f9_add_completion_suggestion.py  a4b5c6d7e8f9_add_user_state_flags.py  a5b6c7d8e9f0_add_journalentry_chord_aspects.py  a6b7c8d9e0f1_add_entitlement.py  a7b8c9d0e1f2_add_metta_return_offer_dismissal.py  a8b9c0d1e2f3_align_practice_duration_and_promptresponse_unique.py  a9b0c1d2e3f4_add_promoted_quote_stale.py  b1c2d3e4f5a6_chat_spend_idempotency.py  b2c3d4e5f6a7_cascade_goal_habit_id.py  b2c3d4e5f6a7_goalgroup_shared_template_check.py  b3c4d5e6f7a8_add_invitation_signal.py  b4c5d6e7f8a1_add_user_ui_flags.py  b4c5d6e7f8a1_course_stage_content_dedupe_unique.py  b5c6d7e8f9a0_habit_unique_user_lower_name.py  b6c7d8e9a0b1_add_random_interval_bell_mode.py  b7c8d9e0f1a2_encrypt_journal_messages.py  b9c0d1e2f3a4_add_user_is_admin.py  c0d1e2f3a4b5_audit_completed_stages_gaps.py  c1d2e3f4a5b6_add_goalcompletion_composite_index.py  c2d3e4f5a6b7_add_habit_is_carryover.py  c3d4e5f6a7b8_goal_tier_enum.py  c3d4e5f6a7b8_user_practice_active_stage_unique.py  c4f7a2b8d9e1_hierarchical_reflection_scope_and_promoted_quote.py  c5d6e7f8a9b0_index_completion_suggestion_target_fks.py  c5ed9dd1dabc_merge_ritual_03_and_ritual_04_heads.py  c6d7e8f9a0b1_add_password_reset_token_and_password_changed_at.py  c7d8e9f0a1b3_journalentry_vault_ref_tags.py  c8d9e0f1a2b3_add_energy_plan.py  c9d0e1f2a3b4_add_metta_return_arc.py  d0e1f2a3b4c5_add_practice_session_idempotency.py  (+32 more)
backend/scripts/: resolve_prev_revision.py  sync_content.py
backend/src/: content_config.py  database.py  errors.py  load_options.py  main.py  observability.py  rate_limit.py  rate_limit_keys.py  seed_content.py  seed_helpers.py  seed_practice_copy.py  seed_practice_recipes.py  seed_practices.py  seed_stages.py  sentry.py
backend/src/curriculum/: __init__.py  archetypal_wavelength.json
backend/src/dependencies/: __init__.py  auth.py  ownership.py  timezone.py
backend/src/domain/: __init__.py  care.py  constants.py  contraction.py  course.py  creek_vault.py  dates.py  depth_preferences.py  detection.py  energy.py  entitlements.py  goals.py  habit_stats.py  invitations.py  marginalia_anchoring.py  metta_return.py  milestones.py  practice_insights.py  practice_modes.py  practice_resolution.py  program_calendar.py  reflection_hierarchy.py  resonance.py  safety.py  stage_progress.py  streaks.py  timezone.py  transcription.py  ui_flags.py  weekly_prompts.py  wheel.py
backend/src/integrations/: __init__.py  gumroad.py
backend/src/middleware/: __init__.py  logging.py  security_headers.py  trace_id.py
backend/src/models/: __init__.py  chat_spend.py  completion_suggestion.py  content_completion.py  course_stage.py  energy_plan.py  entitlement.py  goal.py  goal_completion.py  goal_group.py  gumroad_sale.py  habit.py  invitation_signal.py  journal_entry.py  llm_usage_log.py  login_attempt.py  marginalia.py  metta_return_arc.py  metta_return_habit_release.py  metta_return_offer_dismissal.py  password_reset_token.py  practice.py  practice_recipe.py  practice_session.py  practice_session_idempotency.py  practice_share_link.py  practice_tag.py  promoted_quote.py  prompt_response.py  revoked_token.py  stage_content.py  stage_progress.py  user.py  user_depth_preferences.py  user_practice.py  user_ui_flags.py  wallet_audit.py
backend/src/routers/: __init__.py  admin.py  auth.py  botmason.py  course.py  depth_preferences.py  energy.py  goal_completions.py  goal_groups.py  goals.py  gumroad.py  habits.py  (+17 more)
backend/tests/: conftest.py  test_admin_energy_cleanup.py  test_admin_stage_progress.py  test_admin_usage_stats.py  test_auth.py  test_botmason_api.py  test_completion_accept_dismiss.py  test_completion_detection_endpoint.py  test_completion_suggestion_model.py  test_config_consolidation.py  test_content_repository.py  test_cors.py  test_cors_config.py  test_course_api.py  test_course_body_endpoints.py  test_course_local_content.py  test_course_vendored_content.py  test_creek_vault_client.py  test_creek_vault_domain.py  test_creek_vault_reflect.py  test_creek_vault_wheel.py  test_creek_vault_write.py  test_curriculum.py  test_data_model.py  test_database.py  test_depth_preferences_api.py  test_detection_service.py  test_dockerfile_ships_content.py  test_energy_api.py  test_energy_integration.py  test_energy_retention.py  test_errors.py  test_essay_endpoint.py  test_frequency_endpoint.py  test_global_exception_handler.py  test_goal_completions.py  test_goal_groups_api.py  test_goals_api.py  test_habit_stats_api.py  test_habits_api.py  (+76 more)
(+1704 files in other folders)
