[build-system]
requires = ["setuptools", "wheel"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
known_first_party = ["src"]
src_paths = ["src"]

[tool.ruff]
src = ["backend/src"]
line-length = 100
target-version = "py312"
extend-exclude = ["migrations", ".venv", "venv", "build", "dist"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  # --- Inapplicable frameworks ---
  "AIR",    # Airflow
  "DJ",     # Django
  "NPY",    # NumPy
  "PD",     # pandas
  "PYI",    # type-stubs-only
  "EXE",    # shebang/executable (not a CLI package)
  "INP",    # no-pep420 implicit namespace packages (FastAPI uses packages)
  "INT",    # gettext (no i18n)
  "CPY",    # copyright headers (not required)
  # --- Justified exceptions ---
  "D100", "D101", "D102", "D103", "D104",
  # Missing docstrings enforced by interrogate (threshold 85%) which
  # gives a project-wide score rather than per-module failures. Enabling
  # these would duplicate that gate with worse UX.
  "TRY003", "EM101", "EM102",
  # Forcing one-off exception classes and extracting string literals from
  # raise statements produces more noise than value in server code. The
  # standard Python pattern (`raise ValueError("descriptive msg")`) is
  # justified. TRY003, EM101, and EM102 all target this same pattern.
  "COM812",
  # Trailing-comma enforcement conflicts with ruff-format, which is the
  # sole formatting authority.
  "ISC001",
  # Implicit string concatenation conflicts with ruff-format.
  "TC001", "TC002", "TC003",
  # Type-checking import guards are incompatible with FastAPI/Pydantic/SQLModel
  # which introspect types at runtime for dependency injection, validation, and
  # ORM mapping. Moving imports into TYPE_CHECKING blocks causes 422 errors.
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
# Tests use assert (S101), hardcoded test credentials (S105/S106/S107),
# magic numbers in assertions (PLR2004), boolean positional args in
# parametrize fixtures (FBT001/FBT003), and explicit type-checking imports
# that would be wasteful to guard (TC).
# Patterns include both `tests/` (when run from backend/) and `backend/tests/`
# (when run from repo root by pre-commit).
"tests/**/*.py" = ["S101", "S105", "S106", "S107", "PLR2004", "FBT001", "FBT003"]
"backend/tests/**/*.py" = ["S101", "S105", "S106", "S107", "PLR2004", "FBT001", "FBT003"]
"conftest.py" = ["S101"]
"backend/conftest.py" = ["S101"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
disallow_any_generics = true
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true
show_error_codes = true
pretty = true
explicit_package_bases = true
plugins = ["pydantic.mypy"]
mypy_path = ["backend/src"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q --strict-markers --strict-config --cov=src --cov-report=term-missing --cov-report=xml --cov-fail-under=90"
testpaths = ["tests"]
pythonpath = ["."]
xfail_strict = true

[tool.coverage.run]
branch = true
parallel = true
source = ["src"]
concurrency = ["greenlet"]
omit = [
  "*/tests/*",
  "*/test_*.py",
  "*/conftest.py",
  "*/migrations/*",
  "*/alembic/*",
  "*/settings.py",
  "*/config.py",
]

[tool.radon]
cc_min = "A"
mi_min = "A"
exclude = "migrations,alembic,.venv,venv,tests"
show_complexity = true
average = true

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
]

# Docstring coverage — run via `interrogate` or through scripts/backend/.
# Threshold starts permissive and will tighten as existing modules gain
# docstrings (tracked in Tranche 9 of the adepthood-linters integration).
[tool.interrogate]
fail-under = 85
exclude = ["tests", "migrations", "alembic", ".venv", "venv"]
ignore-init-module = true
ignore-init-method = true
ignore-magic = true
ignore-private = true
ignore-semiprivate = true
ignore-nested-functions = true
verbose = 1

# Dead-code detection. Starts at 80% confidence to minimize false positives
# from dynamic dispatch / FastAPI-registered functions; whitelist entries
# should live in .vulture_whitelist.py when added.
[tool.vulture]
paths = ["src"]
min_confidence = 80
exclude = ["tests", "migrations", "alembic", ".venv", "venv"]
sort_by_size = true
